added input reflect to change and model reflect to input change

--- a/datepicker/index.html
+++ b/datepicker/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="wrapper">
-        <label>Data:<input type="text" id="dateForm"></label>
-        <div id="datePicker" class="left">
+        <label>Data: <input type="text" class="dateForm left"></label>
+        <div  class="datePicker left">
 	        <div class="headerDatePicker">
 	        	<div class="year">2016</div>
 	        	<div class="nextMonth">&gt;</div>
@@ -17,7 +17,8 @@
         	</div>
 	        <div class="calendar left"></div>	
         </div>
-         <div id="datePicker" class="right">
+         <label>Data: <input type="text" class="dateForm right"></label>
+         <div class="datePicker right">
 	        <div class="headerDatePicker">
 	        	<div class="year">2016</div>
 	        	<div class="nextMonth">&gt;</div>
